--- a/_pages/404.html
+++ b/_pages/404.html
@@ -6,7 +6,7 @@ permalink: /404.html
 
 <div class="not-found">
 <h1>404<h1>
-<p>Sorry, but the page that you requested doesn't exist</p>
-<a href="{{ "/" | prepend: site.baseurl }}"> Back Home</a>
+<p>你似乎来到了咸鱼居住的荒原</p>
+<a href="{{ "/" | prepend: site.baseurl }}"> 返回主页</a>
 <a href="{{ "/archive" | prepend: site.baseurl }}">Search Archive</a>
 </div>
